--- a/index.html
+++ b/index.html
@@ -176,6 +176,20 @@
                    data-en="I am a Digital Business student at Universitas Padjadjaran focusing on technology integration for business efficiency. Currently, I serve as an Academic Information System Operator at STIE Gema Widya Bangsa, managing higher education data governance.">
                     Saya adalah mahasiswa Bisnis Digital di Universitas Padjadjaran yang berfokus pada integrasi teknologi untuk efisiensi bisnis.
                 </p>
+                <div class="skills-grid">
+                <div class="skill-card">
+                    <i class="fas fa-shield-alt"></i> <h3>Data Governance</h3>
+                    <p>Berpengalaman dalam menjaga kerahasiaan, integritas, dan keamanan data akademik berskala institusi.</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-server"></i> <h3>System Management</h3>
+                    <p>Mahir mengoperasikan Enterprise Resource Planning (ERP) pendidikan dan manajemen database sistem informasi.</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-exclamation-triangle"></i> <h3>Crisis Management</h3>
+                    <p>Teruji dalam menangani kendala teknis sistem pada periode krusial (KRS & Input Nilai) dengan cepat dan tepat.</p>
+                </div>
+                </div>
             </section>
 
             <section id="experience" class="mb-5">
@@ -265,3 +279,4 @@
 </script>
 </body>
 </html>
+
