--- a/index.html
+++ b/index.html
@@ -285,16 +285,17 @@
                 </div>
 
                 <div class="experience-item">
-                    <h5 class="fw-bold mb-0 translatable" data-id="Sertifikat Kompetensi TKJ" data-en="TKJ Competency Certificate">Sertifikat Kompetensi TKJ</h5>
-                    <div class="cert-date mb-2">PT. Cakrawala Global Informatika | 2019</div>
-                    <p class="small text-muted translatable" data-id="Kompeten dalam instalasi PC, Jaringan LAN, dan Konfigurasi Server." data-en="Competent in PC installation, LAN Networking, and Server Configuration.">Kompeten dalam instalasi PC, Jaringan LAN, dan Konfigurasi Server.</p>
-                </div>
-
-                <div class="experience-item">
                     <h5 class="fw-bold mb-0">Workshop Merdeka Belajar</h5>
                     <div class="cert-date mb-2">Kemendikbudristek RI | Nov 2022</div>
                     <p class="small text-muted translatable" data-id="Workshop mengenai efektivitas program Merdeka Belajar." data-en="Workshop regarding the effectiveness of Merdeka Belajar program.">Workshop mengenai efektivitas program Merdeka Belajar.</p>
                 </div>
+
+                <div class="experience-item">
+                    <h5 class="fw-bold mb-0 translatable" data-id="Sertifikat Kompetensi TKJ" data-en="TKJ Competency Certificate">Sertifikat Kompetensi Networking</h5>
+                    <div class="cert-date mb-2">PT. Cakrawala Global Informatika | 2019</div>
+                    <p class="small text-muted translatable" data-id="Kompeten dalam instalasi PC, Jaringan LAN, dan Konfigurasi Server." data-en="Competent in PC installation, LAN Networking, and Server Configuration.">Kompeten dalam instalasi PC, Jaringan LAN, dan Konfigurasi Server.</p>
+                </div>
+
             </section>
 
             <section id="skills" class="mb-5">
@@ -340,5 +341,6 @@
 </script>
 </body>
 </html>
+
 
 
